--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
+
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header-bg">
@@ -30,5 +31,27 @@
         </nav>
       </div>
     </header>
+
+    <main class="introducao-bg">
+      <div class="introducao">
+        <div class="introducao-conteudo">
+          <h1>
+            Bicicletas feitas sob medida <span class="color-yellow">.</span>
+          </h1>
+          <p>
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+            para você. Explore o mundo na sua velocidade com a Bikcraft.
+          </p>
+          <a href="./bicicletas.html">Selecione a sua</a>
+        </div>
+
+        <div>
+          <img
+            src="./img/fotos/introducao.jpg"
+            alt="Bicicleta elétrica preta"
+          />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
